--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Educational Website</title>
-</head>
+<script type="text/javascript" src="bundle.js"></script></head>
 <body>
   
 
