margin of 10 px added

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
 </nav>
 	
 
+	<div class="fixer">
+
+
 	 <section id="carousel">
 		<div id="carousel-home" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
@@ -365,6 +368,8 @@
 
 <br>
 <br>
+
+</div>
 
 <div class ="footer">
   <h3 style="font-family: Galada; font-size: 35px;">For more infomation Contact at </h3>
