old files replaced with new files again

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Educational Website</title>
-<script type="text/javascript" src="bundle.js"></script></head>
+</head>
 <body>
   
 
@@ -98,9 +98,7 @@
   </div>
 </nav>
 	
-
 	<div class="fixer">
-
 
 	 <section id="carousel">
 		<div id="carousel-home" class="carousel slide" data-ride="carousel">
